<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10sp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <TextView android:id="@+id/KeystorePasswordLabel"
                  android:text="@string/keystore_password_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
            />
        <EditText android:id="@+id/KeystorePassword"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text=""
                  android:inputType="textPassword"
            />

        <TextView android:text="@string/KeyNameLabel"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:layout_marginTop="20sp"
            />

        <EditText android:text="cert"
                  android:inputType="text"
                  android:id="@+id/KeyName"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

        <TextView android:text="@string/KeyPasswordLabel"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:layout_marginTop="10sp"
            />
              
        <EditText android:id="@+id/KeyPassword"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  />


        <TextView android:text="@string/VerifyPasswordLabel"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:layout_marginTop="8sp"
            />

        <EditText android:id="@+id/VerifyPassword"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17sp"
            >

            <Button android:text="@string/CancelButtonLabel"
                    android:id="@+id/CancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:background="@color/red_50"
                android:textColor="@color/black"
                    android:textSize="16sp"
                    android:minWidth="100sp"
                />

            <Button android:text="@string/ContinueButtonLabel"
                    android:id="@+id/ContinueButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginLeft="20sp"
                    android:minWidth="100sp"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>

