<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@null"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/three_hundred"
            android:layout_height="@dimen/hundred"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/home_logo"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/app_version"
            android:text="Version 1.0"
            android:textColor="@color/grey_200"
            style="@style/TextAppearance.AppCompat.Medium"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Cherrio LLC 2020"
            android:textColor="@color/grey_200"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Medium"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:linksClickable="true"
            android:layout_margin="@dimen/five"
            android:id="@+id/terms"
            android:textColorLink="@color/white"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/terms_condition"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/five"
            android:linksClickable="true"
            android:id="@+id/privacy"
            android:textColorLink="@color/white"
            android:text="@string/privacy_policy"
            style="@style/TextAppearance.AppCompat.Medium"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/five"
            android:linksClickable="true"
            android:id="@+id/website"
            android:textColorLink="@color/white"
            android:text="@string/website"
            style="@style/TextAppearance.AppCompat.Medium"
            />

    </LinearLayout>








</RelativeLayout>