<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
>

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create a new Keystore"
        android:textColor="@color/black"
        android:textSize="@dimen/text16"
        android:layout_margin="@dimen/ten"
        android:textStyle="bold"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="Keystore Password"
        android:layout_margin="@dimen/ten"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/keystore_password"
        android:inputType="textPassword"
        android:textSize="@dimen/text15"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="Confirm Keystore Password"
        android:layout_margin="@dimen/ten"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_keystore_password"
            android:inputType="textPassword"
            android:textSize="@dimen/text15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Key"
        android:textColor="@color/black"
        android:textSize="@dimen/text16"
        android:layout_margin="@dimen/ten"
        android:textStyle="normal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="Alias"
        android:layout_margin="@dimen/ten"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/key_alias"
        android:text=""
        android:textSize="@dimen/text15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="Password"
        android:layout_margin="@dimen/ten"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/key_password"
        android:text=""
        android:textSize="@dimen/text15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="Confirm Password"
        android:layout_margin="@dimen/ten"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_key_password"
        android:text=""
        android:textSize="@dimen/text15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/ten"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        >
        <TextView android:text="@string/CertValidityYearsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <EditText android:text="25"
            android:inputType="numberDecimal"
            android:id="@+id/CertValidityYears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:minWidth="40sp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Key"
        android:textColor="@color/black"
        android:textSize="@dimen/text16"
        android:layout_margin="@dimen/fifteen"
        android:textStyle="normal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="Full name"
        android:layout_margin="@dimen/fifteen"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cert_full_name"
            android:text=""
            android:textSize="@dimen/text15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/OrganizationalUnitLabel"
        android:layout_margin="@dimen/fifteen"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cert_org_unit"
            android:text=""
            android:textSize="@dimen/text15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/OrganizationLabel"
        android:layout_margin="@dimen/fifteen"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cert_org"
            android:text=""
            android:textSize="@dimen/text15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="City / Locality"
        android:layout_margin="@dimen/fifteen"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cert_city"
            android:text=""
            android:textSize="@dimen/text15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="State or Province"
        android:layout_margin="@dimen/fifteen"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cert_state"
            android:text=""
            android:textSize="@dimen/text15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/CountryLabel"
        android:layout_margin="@dimen/fifteen"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cert_country_code"
            android:text=""
            android:textSize="@dimen/text15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="CREATE"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:id="@+id/cretae_key_btn"/>

</LinearLayout>


</androidx.core.widget.NestedScrollView>